--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="flex-header-lr">
             <div class="titulo-menu">
                 <i class="fa-solid fa-ticket"></i>
-                <a href="./index.html"><h1 class="titulo-header">INGRESSOU</h1></a>
+                <a href="index.html"><h1 class="titulo-header">INGRESSOU</h1></a>
             </div>
         </div>
     </header>
