--- a/pesquisa.html
+++ b/pesquisa.html
@@ -21,10 +21,10 @@
                 <i class="fa-solid fa-ticket"></i>
                 <h1 class="titulo-header">INGRESSOU</h1>
                 <ul class="menu-header">
-                    <a href="#">
+                    <a href="home.html">
                         <li>Home</li>
                     </a>
-                    <a href="#">
+                    <a href="pesquisa.html">
                         <li>Eventos</li>
                     </a>
                 </ul>
@@ -32,9 +32,9 @@
 
             <div class="busca-profile">
                 <input type="text" class="barra-pesquisa" placeholder="Buscar eventos">
-                <button class="pesquisar"><i class="fa-solid fa-magnifying-glass lupa"></i></button>
+                <a href="pesquisa.html"><button class="pesquisar"><i class="fa-solid fa-magnifying-glass lupa"></i></a></button></a>
 
-                <a href="#" class="profile"><i class="fa-solid fa-user"></i></a>
+                <a href="perfil.html" class="profile"><i class="fa-solid fa-user"></i></a>
             </div>
         </div>
     </header>
@@ -47,8 +47,8 @@
 
         <section class="nav-buttons">
             <section class="buttons">
-                <a href="./pesquisa.html"><button class="nav-btn-style active">Eventos</button></a>
-                <a href="./organizadores.html"><button class="nav-btn-style">Organizadores</button></a>
+                <a href="pesquisa.html"><button class="nav-btn-style active">Eventos</button></a>
+                <a href="organizadores.html"><button class="nav-btn-style">Organizadores</button></a>
             </section>
 
 
@@ -63,7 +63,6 @@
                     <option value="categoria" disabled>Escolha a Categoria</option>
                     <option value="categoria">Musica</option>
                     <option value="categoria">Esportes</option>
-                    <option value="categoria">Festivais</option>
                     <option value="categoria">Teatro</option>
                     <option value="categoria">Festivais</option>
                 </select>
@@ -283,13 +282,13 @@
             <div class="footer-conta">
                 <h3 class="titulo-conta-footer">Conta</h3>
                 <ul class="lista-conta-footer">
-                    <a href="#">
+                    <a href="perfil">
                         <li>Perfil</li>
                     </a>
-                    <a href="#">
+                    <a href="perfil">
                         <li>Tickets</li>
                     </a>
-                    <a href="#">
+                    <a href="reembolso.html">
                         <li>Reembolso</li>
                     </a>
                 </ul>
