--- a/reembolso.html
+++ b/reembolso.html
@@ -14,8 +14,8 @@
     <header>
         <div class="flex-header">
             <div class="div-titulo-header">
-                <a href="index.html"><i class="fa-solid fa-ticket"></i></a>
-                <h1 class="titulo-header"><a href="index.html">INGRESSOU</a></h1>
+                <a href="home.html"><i class="fa-solid fa-ticket"></i></a>
+                <h1 class="titulo-header"><a href="home.html">INGRESSOU</a></h1>
             </div>
         </div>
     </header>
@@ -227,13 +227,13 @@
             <div class="footer-conta">
                 <h3 class="titulo-conta-footer">Conta</h3>
                 <ul class="lista-conta-footer">
-                    <a href="#">
+                    <a href="perfil.html">
                         <li>Perfil</li>
                     </a>
-                    <a href="#">
+                    <a href="perfil.html">
                         <li>Tickets</li>
                     </a>
-                    <a href="#">
+                    <a href="reembolso.html">
                         <li>Reembolso</li>
                     </a>
                 </ul>
