--- a/perfil.html
+++ b/perfil.html
@@ -13,7 +13,7 @@
     <header>
         <div class="flex-header">
             <div class="div-titulo-header">
-                <a href="index.html"><i class="fa-solid fa-ticket"></i></a>
+                <a href="home.html"><i class="fa-solid fa-ticket"></i></a>
                 <h1 class="titulo-header"><a href="index.html">INGRESSOU</a></h1>
             </div>
         </div>
